# safrimba-smartcontract-

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRACT_FRONTEND_MISMATCH.md  CONTRACT_STATES_EXPLAINED.md  CONTRIBUTING.md  Cargo.toml  FIXES.md  LICENSE  Makefile  README.md  SECURITY.md  TEST_REPORT.md  deployment-testnet.json  tx_result.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  other.md
chain/mainnet/: safrochain.json
chain/testnet/: safrochain.json
examples/: schema.rs
scripts/: README.md  README_TEST.md  deploy.sh  e2e_private_circle.sh  test_actions_full.sh  test_create_circle.sh
src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
