[package]
name = "safrimba-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
backtraces = ["cosmwasm-std/backtraces"]
stargate = ["cosmwasm-std/stargate"]

[dependencies]
cosmwasm-std = { version = "1.5", features = ["staking"] }
cosmwasm-storage = { version = "1.5" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = "0.8"
thiserror = "1.0"
cw-storage-plus = "1.1"
cw-utils = "1.0"
cw2 = "1.1"

[dev-dependencies]
cosmwasm-schema = { version = "1.5" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

